# kaggle

./: README.md  pyproject.toml  pyrightconfig.json
data/digit/: submission.csv
kaggle/: digit.py  housing_prices.py  titanic.py
