[tool.poetry]
name = "kaggle"
version = "0.1.0"
description = ""
authors = ["Logan Reed <me@loganreed.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.7.0"
pre-commit = "^3.3.3"
pydocstyle = "^6.3.0"
isort = "^5.12.0"
pytest = "^7.4.0"
tox = "^4.11.0"
matplotlib-backend-kitty = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pydocstyle]
convention = "google"
add-ignore = "D100,D101,D102,D103,D104,D105,D106,D107"
